// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button 1`] = `
.c0 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: lightgrey;
  cursor: pointer;
  padding: 0.4rem 0.7rem;
  line-height: 1;
  white-space: nowrap;
  color: black;
}

<button
  class="c0"
  type="button"
>
  foo
</button>
`;

exports[`renders DecoyButton 1`] = `
.c0 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: lightgrey;
  cursor: pointer;
  padding: 0.4rem 0.7rem;
  line-height: 1;
  white-space: nowrap;
  color: black;
}

<div
  class="c0"
>
  DecoyButton
</div>
`;

exports[`renders danger Button 1`] = `
.c0 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: red;
  cursor: pointer;
  padding: 0.4rem 0.7rem;
  line-height: 1;
  white-space: nowrap;
  color: white;
}

<button
  class="c0"
  type="button"
>
  Danger!
</button>
`;

exports[`renders primary Button 1`] = `
.c0 {
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  padding: 0.4rem 0.7rem;
  line-height: 1;
  white-space: nowrap;
  color: white;
}

<button
  class="c0"
  type="button"
>
  Primary
</button>
`;
